--- a/src/components/ui/switch/index.module.scss
+++ b/src/components/ui/switch/index.module.scss
@@ -38,7 +38,7 @@
       height: 32px;
       padding: 0;
       line-height: 32px;
-      font-size: var(--fs-13);
+      font-size: var(--fs-12);
       color: white;
       font-weight: bold;
       box-sizing: border-box;
@@ -116,6 +116,169 @@
       }
       .toggleSwitch__switch {
         right: 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 1920px) {
+  .toggleSwitch {
+    width: 95px;
+    height: 25px;
+
+    &__label {
+      border-radius: 20px;
+      margin: 0;
+    }
+    &__inner {
+      display: block;
+      width: 200%;
+      margin-left: -100%;
+      transition: margin 0.2s ease-in 0s;
+      &:before,
+      &:after {
+        width: 50%;
+        height: 25px;
+        padding: 0;
+        line-height: 25px;
+        font-size: var(--fs-11);
+        padding: 0 35px 0 0; // podcast sagdan genislet
+      }
+      &:before {
+        padding-left: 15px;
+      }
+    }
+    &__inner:after {
+      padding-right: 24px;
+    }
+    &__switch {
+      width: 16px;
+      right: 60px; //
+      margin-right: 15px; // radio switch oynat
+    }
+    &__checkbox:checked + &__label {
+      .toggleSwitch__inner {
+        margin-left: 0;
+      }
+      .toggleSwitch__switch {
+        width: 16px;
+        right: -1px; //
+        margin: 5px;
+        margin-left: 6px;
+      }
+    }
+    &.smallSwitch {
+      width: 6.5rem;
+
+      .toggleSwitch__inner:after {
+        padding-right: 1.6rem; //
+      }
+
+      .toggleSwitch__inner {
+        &:after,
+        &:before {
+          height: 2rem; //
+          line-height: 2rem; //
+          font-size: var(--fs-10);
+        }
+      }
+      .toggleSwitch__switch {
+        width: 1.4rem;
+        height: 1.4rem;
+        right: 4.5rem;
+        margin: 0.3rem;
+      }
+
+      .toggleSwitch__checkbox:checked + .toggleSwitch__label {
+        .toggleSwitch__inner {
+          margin-left: 0;
+        }
+        .toggleSwitch__switch {
+          right: -0.1rem;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1600px) {
+  .toggleSwitch {
+    width: 77.6px;
+    height: 19.7px;
+
+    &__label {
+      border-radius: 20px;
+      margin: 0;
+    }
+    &__inner {
+      display: block;
+      width: 200%;
+      margin-left: -100%;
+      transition: margin 0.2s ease-in 0s;
+      &:before,
+      &:after {
+        width: 50%;
+        height: 19.7px;
+        padding: 0;
+        line-height: 19.7px;
+        font-size: var(--fs-10);
+        font-weight: var(--fw-6);
+        padding: 0 35px 0 0; // podcast sagdan genislet
+      }
+      &:before {
+        padding-left: 15px;
+      }
+    }
+    &__inner:after {
+      padding-right: 20px;
+    }
+    &__switch {
+      width: 15px;
+      right: 44px; //
+      margin: 2.6px;
+      line-height: 19.7px;
+      margin-right: 15px; // radio switch oynat
+    }
+    &__checkbox:checked + &__label {
+      .toggleSwitch__inner {
+        margin-left: 0;
+      }
+      .toggleSwitch__switch {
+        width: 12.9px;
+        right: 1px; //
+        margin: 3px;
+        margin-left: 6px;
+      }
+    }
+    &.smallSwitch {
+      width: 6.5rem;
+
+      .toggleSwitch__inner:after {
+        padding-right: 1.6rem; //
+      }
+
+      .toggleSwitch__inner {
+        &:after,
+        &:before {
+          height: 2rem; //
+          line-height: 2rem; //
+          font-size: var(--fs-10);
+        }
+      }
+      .toggleSwitch__switch {
+        width: 1.4rem;
+        height: 1.4rem;
+        right: 4.5rem;
+        margin: 0.3rem;
+      }
+
+      .toggleSwitch__checkbox:checked + .toggleSwitch__label {
+        .toggleSwitch__inner {
+          margin-left: 0;
+        }
+        .toggleSwitch__switch {
+          right: -0.1rem;
+        }
       }
     }
   }
