--- a/src/layout/app-layout/style.module.scss
+++ b/src/layout/app-layout/style.module.scss
@@ -10,24 +10,23 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  // height: calc(100vh - 4.925rem);
   position: fixed;
   width: 400px;
 
   &__description {
     font-family: var(--f-poppings);
-    font-size: var(--fs-13);
+    font-size: var(--fs-18);
     font-weight: var(--fw-4);
-    line-height: 22px;
-    display: -webkit-box;
-    -webkit-line-clamp: 4;
+    line-height: 1.5;
+    display: -webkit-box !important;
+    word-break: break-all;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
     overflow: hidden;
     background: #fff;
-
+    
     p {
-      padding: 1rem;
+      padding: 16px;
     }
   }
 }
@@ -58,8 +57,6 @@
 }
 
 .authenticatedLinks {
-  // margin-right: 2rem;
-
   &__item {
     font-size: var(--fs-20);
     font-weight: var(--fw-6);
@@ -78,9 +75,6 @@
   margin-top: 1.5rem;
   font-size: var(--fs-18) !important;
   font-weight: var(--fw-4) !important;
-  // background-color: var(--cl-placeholder-bg) !important;
-  // border-bottom-left-radius: 2rem !important;
-  // border-top-left-radius: 2rem !important;
   border-radius: 2rem !important;
   height: 3.8rem;
   overflow: hidden;
@@ -125,7 +119,6 @@
       color: black !important;
       &:not(.collapsed)::after {
         background-image: url();
-        // background-image: initial !important;
         color: black !important;
       }
       &::after {
@@ -278,7 +271,7 @@
     width: 361.1px;
 
     &__description {
-      font-size: var(--fs-16);
+      font-size: var(--fs-17);
       line-height: 22px;
       -webkit-line-clamp: 27;
     }
@@ -307,7 +300,7 @@
     width: 323px;
 
     &__description {
-      font-size: var(--fs-16);
+      font-size: var(--fs-14);
       line-height: 22px;
       -webkit-line-clamp: 27;
     }
@@ -338,15 +331,16 @@
     &__description {
       font-size: var(--fs-16);
       line-height: 22px;
-      -webkit-line-clamp: 27;
+      -webkit-line-clamp: 3;
     }
   }
 
   .switch {
     padding: 0.6rem;
   }
+
   .banner {
-    max-height: 20rem;
+    height: 205px;
   }
 }
 
