--- a/src/sections/player-desktop/index.module.scss
+++ b/src/sections/player-desktop/index.module.scss
@@ -27,6 +27,7 @@
   position: relative;
   color: #fff;
   width: 100%;
+  height: 400px;
 
   &__overlay {
     position: absolute;
@@ -39,9 +40,9 @@
   }
 
   &__img {
-    // min-height: 27rem;
     width: 100%;
-    // object-fit: cover;
+    height: 100%;
+    object-fit: cover;
   }
 
   .info {
@@ -50,16 +51,21 @@
     text-align: center;
     width: 100%;
 
-    &__song {
-      margin-bottom: 1rem;
+    &__artist {
+      padding: 0 20px;
+      font-size: var(--fs-17);
+      font-size: var(--fw-6);
     }
-
-    &__description {
+    &__song {
+      font-size: var(--fs-12);
+      margin-bottom: 16px;
+    }
+    &__artist,
+    &__song {
       display: -webkit-box;
       -webkit-line-clamp: 1;
       -webkit-box-orient: vertical;
       overflow: hidden;
-      padding: 0 20px;
     }
   }
 
@@ -108,6 +114,16 @@
 }
 
 @media (max-width: 1789px) {
+  .info {
+    &__artist {
+      font-size: var(--fs-22);
+      font-size: var(--fw-6);
+    }
+    &__song {
+      font-size: var(--fs-16);
+    }
+  }
+
   .switch {
     gap: 7.3px;
     &__text {
@@ -121,6 +137,15 @@
 }
 
 @media (max-width: 1600px) {
+  .info {
+    &__artist {
+      font-size: var(--fs-17);
+    }
+    &__song {
+      font-size: var(--fs-12);
+    }
+  }
+
   .switch {
     padding: 21.6px 9.8px;
     grid-gap: 8.1px;
@@ -146,6 +171,16 @@
   }
 }
 
+// @media (max-width: 1366px) {
+//   &__artist {
+//     font-size: var(--fs-17);
+//     font-size: var(--fw-6);
+//   }
+//   &__song {
+//     font-size: var(--fs-12);
+//   }
+// }
+
 @media (max-width: 1200px) {
   .switch {
     padding: 1rem 0.5rem;
@@ -154,15 +189,6 @@
     &__text {
       font-size: var(--fs-13);
       font-weight: var(--fw-6);
-    }
-  }
-
-  .player {
-    max-height: 40rem;
-    &__img {
-      max-height: 40rem;
-      width: 100%;
-      // object-fit: cover;
     }
   }
 }
