--- a/src/sections/player-desktop/index.module.scss
+++ b/src/sections/player-desktop/index.module.scss
@@ -235,23 +235,13 @@
   }
 
   .player {
-    height: 37.5rem;
-    &__img {
-      width: 100%;
-      height: 100%;
-    }
+    height: 325px;
   }
 }
 
 @media (max-width: 576px) {
   .player {
-    height: 37.5rem;
-
-    &__img {
-      width: 100%;
-      height: 100%;
-      object-fit: fill;
-    }
+    height: 375px;
   }
 
   .switch {
