--- a/src/layout/app-layout/style.module.scss
+++ b/src/layout/app-layout/style.module.scss
@@ -332,6 +332,7 @@
       font-size: var(--fs-14);
       line-height: 22px;
       -webkit-line-clamp: 27;
+      min-height: 178px
     }
   }
 
@@ -375,6 +376,7 @@
       font-size: var(--fs-16);
       line-height: 22px;
       -webkit-line-clamp: 3;
+      min-height: 178px
     }
   }
 
