--- a/src/components/ui/avatar/index.module.scss
+++ b/src/components/ui/avatar/index.module.scss
@@ -31,6 +31,10 @@
     }
   }
   /* Sizes */
+  &.size_xs {
+    width: 32px;
+    height: 32px;
+  }
   &.size_sm {
     width: 3.9rem;
     height: 3.9rem;
