--- a/src/sections/blog-video-detail/index.module.scss
+++ b/src/sections/blog-video-detail/index.module.scss
@@ -24,7 +24,7 @@
     font-size: var(--fs-18);
     font-weight: var(--fw-4);
     margin-top: 4rem;
-    padding: 0 1rem;
+    // padding: 0 1rem;
   }
 }
 
