--- a/src/sections/player-mobile/index.module.scss
+++ b/src/sections/player-mobile/index.module.scss
@@ -2,19 +2,19 @@
   button:not(:nth-child(3)) {
     background: unset;
     border: unset;
-    //padding: 0;
-    // margin: 0;
-    // color: black;
   }
   button:nth-child(1) {
     border: unset;
     background: unset;
   }
+  button:not(:last-child) {
+    margin-right: 6px;
+  }
 
   .icon {
     border: 0.1rem solid #fff;
-    width: 3.8rem;
-    height: 3.8rem;
+    width: 45px;
+    height: 45px;
     border-radius: 30px;
     background: black !important;
     // background: #fff;
@@ -34,32 +34,31 @@
   .mobilePlayer {
     margin-top: 1.4rem;
 
-    &__item {
-      width: 2rem;
-      height: 2rem;
-    }
+    // &__item {
+    //   width: 2rem;
+    //   height: 2rem;
+    // }
 
-    &__favorite {
-      width: 2rem;
-      height: 2rem;
-      color: white;
-    }
+    // &__favorite {
+    //   width: 2rem;
+    //   height: 2rem;
+    //   color: white;
+    // }
 
     .icon {
       border: 0.1rem solid #fff;
-      width: 3.2rem;
-      height: 3.2rem;
+      width: 40px;
+      height: 40px;
       border-radius: 30px;
       background: black !important;
     }
     .switch {
       position: absolute;
-      // margin-left: 3rem;
       right: 1rem;
     }
 
     .song {
-      font-size: var(--fw-13);
+      font-size: var(--fw-10);
       font-weight: var(--fw-4);
       display: -webkit-box;
       -webkit-line-clamp: 1;
