--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -16,7 +16,7 @@ body {
   font-family: $primaryFont;
   padding-right: 0px !important; // **Can couse ui issue
   overflow-x: hidden;
-  // background: #e5e5e5;
+  background: #e5e5e5;  
 }
 
 .h1,
