--- a/src/components/Items/PodcastOtherItems/index.module.scss
+++ b/src/components/Items/PodcastOtherItems/index.module.scss
@@ -1,44 +1,15 @@
-.podcastOtherBox{
-    display: flex;
-    margin-bottom: 1.6rem;
-    padding: 0rem 1rem;
-    &__image{
-        width: 30%;
-        position: relative;
-        img{
-            width: 100%;
-        }
-    }
-    &__btn{ 
-        position: absolute; 
-        top: 20%;
-        left: 20%;
-        background: #000;
-        width: 50px;
-        height: 50px;
-        border-radius: 3rem;
-        border: unset;
-    }
-    &__content{
-        width: 70%;
-        background: #eeee;
-        padding: 1.5rem;
-        &_title{
-            h4{
-                display: -webkit-box;
-	-webkit-line-clamp: 1;
-	-webkit-box-orient: vertical;  
-	overflow:hidden;
-            }
-        }
-    }
-    &__info{
+.podcastOther{
+    background-color: #000;
+  }
+              
+              .podcastBox{
+                &__image{
+                    img{
+                        width: 100%;
+                    }
+                }
+              }
 
-    }
-    &__player{
-
-    }
-}
 
 @media (max-width: 1336px) {
     .podcastOtherBox{
