--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -54,6 +54,16 @@
   --cl-card-bg: #ffffff;
   --cl-placeholder-bg: #585858;
   --cl-placeholder: #919191;
+
+  // * MARGINS
+  --m-8: 8px;
+  --m-16: 16px;
+  --m-24: 24px;
+  --m-32: 32px;
+  --m-40: 40px;
+  --m-48: 48px;
+  --m-56: 56px;
+  --m-64: 64px;
 }
 
 /** 
