--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2737,7 +2737,7 @@ textarea.form-control-lg {
   --bs-btn-bg: transparent;
   --bs-btn-border-width: 1px;
   --bs-btn-border-color: transparent;
-  /* --bs-btn-border-radius: 0.375rem; */
+  --bs-btn-border-radius: 0.375rem;
   --bs-btn-hover-border-color: transparent;
   --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
   --bs-btn-disabled-opacity: 0.65;
@@ -2755,7 +2755,7 @@ textarea.form-control-lg {
   cursor: pointer;
   user-select: none;
   border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
-  /* border-radius: var(--bs-btn-border-radius); */
+  border-radius: var(--bs-btn-border-radius);
   background-color: var(--bs-btn-bg);
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -3100,14 +3100,14 @@ textarea.form-control-lg {
   --bs-btn-padding-y: 0.5rem;
   --bs-btn-padding-x: 1rem;
   --bs-btn-font-size: 1.25rem;
-  /* --bs-btn-border-radius: 0.5rem; */
+  --bs-btn-border-radius: 0.5rem;
 }
 
 .btn-sm, .btn-group-sm > .btn {
   --bs-btn-padding-y: 0.25rem;
   --bs-btn-padding-x: 0.5rem;
   --bs-btn-font-size: 0.875rem;
-  /* --bs-btn-border-radius: 0.25rem; */
+  --bs-btn-border-radius: 0.25rem;
 }
 
 .fade {
@@ -14717,6 +14717,14 @@ textarea.form-control-lg {
   --cl-card-bg: #ffffff;
   --cl-placeholder-bg: #585858;
   --cl-placeholder: #919191;
+  --m-8: 8px;
+  --m-16: 16px;
+  --m-24: 24px;
+  --m-32: 32px;
+  --m-40: 40px;
+  --m-48: 48px;
+  --m-56: 56px;
+  --m-64: 64px;
 }
 
 /** 
