--- a/src/layout/app-layout/style.module.scss
+++ b/src/layout/app-layout/style.module.scss
@@ -57,16 +57,30 @@
 }
 
 .authenticatedLinks {
+  &__link:nth-child(1),
+  &__link:nth-child(2) {
+    margin-right: 32px;
+  }
   &__item {
-    font-size: var(--fs-20);
+    font-size: var(--fs-26);
     font-weight: var(--fw-6);
     background: transparent;
     border: none;
     transition: 0.2s ease;
-    margin-right: 2.5rem;
+
     &:hover {
       color: rgba(91, 91, 91, 0.905) !important;
     }
+  }
+}
+
+.rightBox {
+  display: flex;
+  align-items: center;
+  margin-left: 96px;
+
+  div:not(:last-child) {
+    margin-right: 48px;
   }
 }
 
@@ -186,14 +200,16 @@
 
 .navbar {
   position: fixed !important;
-  height: 80px;
+  height: 82px;
   &__hamburger {
     width: 100%;
     height: 100%;
   }
   &__logo {
-    width: 100%;
-    height: 100%;
+    width: 162px;
+    height: 33px;
+    object-fit: cover;
+    aspect-ratio: 1/1;
   }
   .navbar-toggler {
     padding-bottom: 0;
@@ -331,7 +347,17 @@
       font-size: var(--fs-14);
       line-height: 22px;
       // -webkit-line-clamp: 27;
-      min-height: 178px
+      min-height: 178px;
+    }
+  }
+
+  .btnContainer {
+    &__moodBtn {
+      position: relative;
+      font-size: var(--fs-16);
+      font-weight: var(--fw-6);
+      padding: 4.98px 26.56px;
+      color: #fff;
     }
   }
 
@@ -353,8 +379,8 @@
       height: 15px;
     }
     &__logo {
-      width: 135px;
-      height: 28px;
+      width: 134.29px;
+      height: 27.28px;
     }
   }
   .wrapper {
@@ -375,7 +401,13 @@
       font-size: var(--fs-16);
       line-height: 22px;
       // -webkit-line-clamp: 3;
-      min-height: 178px
+      min-height: 178px;
+    }
+  }
+
+  .btnContainer {
+    &__btn {
+      font-size: var(--fs-14);
     }
   }
 
@@ -391,7 +423,7 @@
 @media (max-width: 1366px) {
   .navbar {
     position: fixed !important;
-    height: 52px;
+    height: 58.96px;
     padding: 0 !important;
     &__hamburger {
       width: 20px;
@@ -403,20 +435,19 @@
     }
   }
   .wrapper {
-    // &__side {
-    //   width: 25rem;
-    // }
     padding-top: 52px;
+
     &__content {
       width: calc(100% - 246.5px);
     }
   }
-
-  .sidebar {
-    // width: 25rem;
-
-    &__description {
-      // -webkit-line-clamp: 4;
+  .btnContainer {
+    &__moodBtn {
+      font-size: var(--fs-14);
+      padding: 4.13px 22px;
+    }
+    &__btn {
+      font-size: var(--fs-12);
     }
   }
 }
