--- a/src/sections/card/podcast/index.module.scss
+++ b/src/sections/card/podcast/index.module.scss
@@ -47,11 +47,11 @@
       }
 
       &__icon {
-        width: 60% !important;
-        height: 60% !important;
+        width: 47%;
+        height: 47%;
         position: absolute;
         top: 50%;
-        left: 50%;
+        left: 52%;
         transform: translate(-50%, -50%);
       }
     }
@@ -189,7 +189,7 @@
 //     }
 
 //     .body {
-//       padding: 5.5px; 
+//       padding: 5.5px;
 
 //       &__title {
 //         font-size: var(--fs-12) !important;
