--- a/src/sections/banner/index.module.scss
+++ b/src/sections/banner/index.module.scss
@@ -1,15 +1,41 @@
 .banner {
-  max-height: 30rem;
+  max-width: 100%;
+  height: 100%;
+  &__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1789px) {
   .banner {
-    max-height: 20rem;
+    &__img {
+      height: 250px;
+    }
+  }
+}
+
+@media (max-width: 1600px) {
+  .banner {
+    &__img {
+      height: 100%;
+    }
+  }
+}
+
+@media (max-width: 1366px) {
+  .banner {
+    &__img {
+      width: 100%;
+      height: 185px;
+      object-fit: fill;
+    }
   }
 }
 
 @media (max-width: 992px) {
   .banner {
-    max-height: 35rem;
+    // max-height: 35rem;
   }
 }
