updated useWindowsize hook, player buttons responsive sizes changed

--- a/src/layout/app-layout/style.module.scss
+++ b/src/layout/app-layout/style.module.scss
@@ -23,6 +23,7 @@
     text-overflow: ellipsis;
     background: #fff;
     overflow-y: auto;
+    min-height: 200px;
     height: 100%;
 
     &__item {
