--- a/src/sections/player-desktop/index.module.scss
+++ b/src/sections/player-desktop/index.module.scss
@@ -68,32 +68,48 @@
     }
   }
 
-  .controlWrapper {
+  .controlSection {
     display: flex;
     justify-content: center;
+    width: 100%;
 
-    .control {
+    .controlContainer {
       position: absolute;
-      bottom: 5%;
+      bottom: 7%;
+      width: 100%;
+      display: flex;
+      justify-content: center;
 
-      &__btn {
-        margin-left: 0.5rem;
-      }
+      .controlBox {
+        display: flex;
+        justify-content: space-evenly;
+        width: 80%;
 
-      button {
-        background: unset;
-        border: unset;
-        padding: 0;
-        margin: 0;
-        color: #fff;
-      }
+        button {
+          background: unset;
+          border: unset;
+          padding: 0;
+          margin: 0;
+          color: #fff;
+        }
 
-      &__icon {
-        background: #fff !important;
-        width: 40px;
-        height: 40px;
-        border-radius: 30px;
-        color: #000 !important;
+        &__playerButton {
+          position: relative;
+          background: #fff !important;
+          width: 56px;
+          height: 56px;
+          border-radius: 30px;
+          color: #000 !important;
+        }
+        &__icon {
+          position: absolute;
+          left: 51%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+        }
+        &__play {
+          left: 53%;
+        }
       }
     }
   }
@@ -109,6 +125,13 @@
 
   .player {
     height: 361.1px;
+  }
+
+  .controlBox {
+    &__playerButton {
+      width: 50px !important;
+      height: 50px !important;
+    }
   }
 }
 
@@ -133,6 +156,13 @@
   .player {
     height: 323px;
   }
+
+  .controlBox {
+    &__playerButton {
+      width: 45px !important;
+      height: 45px !important;
+    }
+  }
 }
 
 @media (max-width: 1600px) {
@@ -155,6 +185,13 @@
 
   .player {
     height: 246px;
+  }
+
+  .controlBox {
+    &__playerButton {
+      width: 34.5px !important;
+      height: 34.5px !important;
+    }
   }
 }
 
