--- a/src/components/ui/switch/index.module.scss
+++ b/src/components/ui/switch/index.module.scss
@@ -233,10 +233,11 @@
       padding-right: 20px;
     }
     &__switch {
-      width: 15px;
-      right: 44px; //
-      margin: 2.6px;
-      line-height: 19.7px;
+      width: 12.94px;
+      height: 12.94px;
+      right: 46px; //
+      margin: 3.3px;
+      line-height: 12.94px;
       margin-right: 15px; // radio switch oynat
     }
     &__checkbox:checked + &__label {
