--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14700,11 +14700,14 @@ textarea.form-control-lg {
   --fs-33: 33px;
   --fs-34: 34px;
   --fs-37: 37px;
+  --fs-38: 38px;
   --fs-39: 39px;
   --fs-40: 40px;
   --fs-44: 44px;
+  --fs-46: 46px;
   --fs-48: 48px;
   --fs-50: 50px;
+  --fs-56: 56px;
   --fs-60: 60px;
   --fs-61: 61px;
   --fs-62: 62px;
