--- a/src/layout/app-layout/style.module.scss
+++ b/src/layout/app-layout/style.module.scss
@@ -79,7 +79,7 @@
   display: flex;
   align-items: center;
   margin-left: 96px;
-
+  margin-right: 24px;
   div:not(:last-child) {
     margin-right: 48px;
   }
