--- a/src/sections/other-posts/index.module.scss
+++ b/src/sections/other-posts/index.module.scss
@@ -3,3 +3,16 @@
   flex-direction: column;
   gap: 32px;
 }
+.otherTitle{
+  font-size: 20px;
+  margin-bottom: 32px;
+  font-weight: 600;
+}
+.podcastSection{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+  &_box{
+    width: 215px;
+  }
+}
