--- a/src/pages/podcast/detail/index.module.scss
+++ b/src/pages/podcast/detail/index.module.scss
@@ -32,6 +32,9 @@
       font-size: var(--fs-15);
       font-weight: var(--fw-5);
     }
+    &__middle{
+      padding-left: 24px;
+    }
     &__paragraph {
       margin-top: 32px;
       &_p{
@@ -42,7 +45,6 @@
     }
 
     &__image{
-      margin-right: 24px;
       padding: 0;
       img{
         width: 100%;
@@ -126,48 +128,45 @@
 //   background-color: palegoldenrod;
 // }
 
-@media (max-width: 1440px) {
+@media (max-width: 1600px) {
   .wrapper {
     .podcastSection {
+      height: 157px;
+
+      .podcastContent{
+        width: 1020px;
+      }
+
       &__title {
-        font-size: var(--fs-25);
+        font-size: 19px;
         font-weight: var(--fw-6);
       }
       &__artist {
-        font-size: var(--fs-22);
+        font-size: 16px;
         font-weight: var(--fw-5);
       }
       &__text {
-        font-size: var(--fs-15);
+        font-size: 16px;
         font-weight: var(--fw-5);
       }
     }
   }
-
-  .genre {
-    font-size: var(--fs-14) !important;
-    font-weight: var(--fw-4) !important;
-  }
-
-  .more {
-    font-size: var(--fs-14);
-    font-weight: var(--fw-5);
-  }
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1366px) {
   .wrapper {
     .podcastSection {
+      height: 146px;
       &__title {
-        font-size: var(--fs-18);
+        font-size: 19px;
         font-weight: var(--fw-6);
       }
       &__artist {
-        font-size: var(--fs-16);
+        font-size: 16px;
         font-weight: var(--fw-5);
       }
       &__text {
-        font-size: var(--fs-15);
+        font-size: 14px;
         font-weight: var(--fw-5);
       }
     }
